Update Level1.3 Exercises

--- a/Level1.5_Ex4/Level1.5_Ex4.vcxproj.filters
+++ b/Level1.5_Ex4/Level1.5_Ex4.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Level1HW.cpp">
+    <ClCompile Include="Level1.5_Ex4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
