--- a/Level3/Level2.2_Ex1/Level2.2_Ex1.vcxproj
+++ b/Level3/Level2.2_Ex1/Level2.2_Ex1.vcxproj
@@ -125,6 +125,10 @@
   <ItemGroup>
     <ClInclude Include="Point.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Main.C" />
+    <ClCompile Include="Point.C" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
