--- a/Level3/Level2.2_Ex1/Level2.2_Ex1.vcxproj.filters
+++ b/Level3/Level2.2_Ex1/Level2.2_Ex1.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Point.C">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Main.C">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
