--- a/Level3/oldeLevel2.2_Ex1/Level2.2_Ex1.vcxproj.filters
+++ b/Level3/oldeLevel2.2_Ex1/Level2.2_Ex1.vcxproj.filters
@@ -18,12 +18,15 @@
     <ClInclude Include="Point.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Point0.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Point.cpp">
+    <ClCompile Include="Point.C">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="Main.C">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
