Complete Level2.3_Ex5: for now

--- a/Level3/Level2.3_Ex5/Level2.3_Ex5.vcxproj.filters
+++ b/Level3/Level2.3_Ex5/Level2.3_Ex5.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="Line.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UserInput.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
