--- a/Level3/Level2.3_Ex5/Level2.3_Ex5.vcxproj
+++ b/Level3/Level2.3_Ex5/Level2.3_Ex5.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Point.cpp" />
+    <ClCompile Include="UserInput.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
