--- a/Level3/Level2.3_Ex7/Level2.3_Ex2.7.vcxproj
+++ b/Level3/Level2.3_Ex7/Level2.3_Ex2.7.vcxproj
@@ -35,6 +35,7 @@
     <ProjectGuid>{A4277DFE-C5B3-4A06-AF7C-66ED8DB43471}</ProjectGuid>
     <RootNamespace>Level23Ex27</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Level2.3_Ex7</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
