Complete Level3.6_Ex2: exception handling by object

--- a/Level5/Level3.6_Ex2_Exception-Handling_Exception-Objects/Level3.6_Ex2_Exception-Handling_Exception-Objects.vcxproj
+++ b/Level5/Level3.6_Ex2_Exception-Handling_Exception-Objects/Level3.6_Ex2_Exception-Handling_Exception-Objects.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Array.cpp" />
+    <ClCompile Include="ArrayException.cpp" />
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="Main.cpp" />
@@ -133,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
+    <ClInclude Include="ArrayException.h" />
     <ClInclude Include="Circle.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="Point.h" />
