--- a/Level5/Level3.6_Ex2_Exception-Handling_Exception-Objects/Level3.6_Ex2_Exception-Handling_Exception-Objects.vcxproj.filters
+++ b/Level5/Level3.6_Ex2_Exception-Handling_Exception-Objects/Level3.6_Ex2_Exception-Handling_Exception-Objects.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ArrayException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Shape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrayException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
