Complete Level4.2b_Ex1: Static Variable for Array Default Size

--- a/Level6/Level4.2b_Ex1_A-T_Static-Variable-Arr-Def-Size/Level4.2b_Ex1_A-T_Static-Variable-Arr-Def-Size.vcxproj.filters
+++ b/Level6/Level4.2b_Ex1_A-T_Static-Variable-Arr-Def-Size/Level4.2b_Ex1_A-T_Static-Variable-Arr-Def-Size.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Array.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="ArrayException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -36,12 +39,12 @@
     <ClCompile Include="UserInput.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Array.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ArrayException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Circle.h">
