--- a/Level6/Level4.2b_Ex1_A-T_Static-Variable-Arr-Def-Size/Level4.2b_Ex1_A-T_Static-Variable-Arr-Def-Size.vcxproj
+++ b/Level6/Level4.2b_Ex1_A-T_Static-Variable-Arr-Def-Size/Level4.2b_Ex1_A-T_Static-Variable-Arr-Def-Size.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{19200189-0B1F-4E17-9003-8DDF7AD6FADC}</ProjectGuid>
-    <RootNamespace>Level42aEx1TemplatesTemplatedArrayClass</RootNamespace>
+    <ProjectGuid>{3C21673A-0EDB-438E-B11D-CDB3C467365A}</ProjectGuid>
+    <RootNamespace>Level42bEx1ATStaticVariableArrDefSize</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
+    <ClInclude Include="ArrayException.h" />
     <ClInclude Include="Circle.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="Point.h" />
