Complete Level4.2b_Ex2: Advanced Templates​ - Numeric Array (generic inheritance), main test

--- a/Level6/Level4.2b_Ex2_A-T_Numeric-Array-Generic-Inheritance/Level4.2b_Ex2_A-T_Numeric-Array-Generic-Inheritance.vcxproj.filters
+++ b/Level6/Level4.2b_Ex2_A-T_Numeric-Array-Generic-Inheritance/Level4.2b_Ex2_A-T_Numeric-Array-Generic-Inheritance.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="UserInput.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="NumericArray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Shape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NumericArray.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
