--- a/Level6/Level4.2b_Ex2_A-T_Numeric-Array-Generic-Inheritance/Level4.2b_Ex2_A-T_Numeric-Array-Generic-Inheritance.vcxproj
+++ b/Level6/Level4.2b_Ex2_A-T_Numeric-Array-Generic-Inheritance/Level4.2b_Ex2_A-T_Numeric-Array-Generic-Inheritance.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="NumericArray.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="UserInput.cpp" />
@@ -137,6 +138,7 @@
     <ClInclude Include="ArrayException.h" />
     <ClInclude Include="Circle.h" />
     <ClInclude Include="Line.h" />
+    <ClInclude Include="NumericArray.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Shape.h" />
   </ItemGroup>
