Update level7_Ex1: Sum() with iterator args complete

--- a/Level7/Level7_Ex1_Overview-STL-Containers/Level7_Ex1_Overview-STL-Containers.vcxproj
+++ b/Level7/Level7_Ex1_Overview-STL-Containers/Level7_Ex1_Overview-STL-Containers.vcxproj
@@ -134,7 +134,7 @@
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="Stack.cpp" />
     <ClCompile Include="StackException.cpp" />
-    <ClCompile Include="UserInput.cpp" />
+    <ClCompile Include="User_input.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
