--- a/Level7/Level7_Ex1_Overview-STL-Containers/Level7_Ex1_Overview-STL-Containers.vcxproj.filters
+++ b/Level7/Level7_Ex1_Overview-STL-Containers/Level7_Ex1_Overview-STL-Containers.vcxproj.filters
@@ -48,7 +48,7 @@
     <ClCompile Include="StackException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="UserInput.cpp">
+    <ClCompile Include="User_input.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
