--- a/Level8/Level5.1_Ex3_Boost-C-Libs_Variant/Level5.1_Ex3_Boost-C-Libs_Variant.vcxproj.filters
+++ b/Level8/Level5.1_Ex3_Boost-C-Libs_Variant/Level5.1_Ex3_Boost-C-Libs_Variant.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClInclude Include="STLHelperFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BoostHelperFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
