--- a/Level8/Level5.1_Ex5_Boost-C-Libs_Statistical-Functions/Level5.1_Ex5_Boost-C-Libs_Statistical-Functions.vcxproj.filters
+++ b/Level8/Level5.1_Ex5_Boost-C-Libs_Statistical-Functions/Level5.1_Ex5_Boost-C-Libs_Statistical-Functions.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TestNormalDistribution.cpp">
+    <ClCompile Include="Statistical_Functions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
