--- a/Level9/Level9_ExA+B_Exact-Pricing-Methods/Level9_ExA+B_Exact-Pricing-Methods.vcxproj
+++ b/Level9/Level9_ExA+B_Exact-Pricing-Methods/Level9_ExA+B_Exact-Pricing-Methods.vcxproj
@@ -115,6 +115,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalUsingDirectories>C:\Users\paola\source\boost_1_70_0</AdditionalUsingDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -138,14 +139,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Array.cpp" />
-    <ClCompile Include="ArrayException.cpp" />
     <ClCompile Include="EuropeanOption.cpp" />
     <ClCompile Include="TestEuropeanOption.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Array.h" />
-    <ClInclude Include="ArrayException.h" />
     <ClInclude Include="EuropeanOption.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
