Update: Level9_ExA+B_B: delta vector output

--- a/Level9/Level9_ExA+B_Exact-Pricing-Methods_B/Level9_ExA+B_Exact-Pricing-Methods_B.vcxproj.filters
+++ b/Level9/Level9_ExA+B_Exact-Pricing-Methods_B/Level9_ExA+B_Exact-Pricing-Methods_B.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="TestEuropeanOption.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EuropeanOptionException.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EuropeanOption.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EuropeanOptionException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
