--- a/Level9/Level9_ExA+B_Exact-Pricing-Methods_B/Level9_ExA+B_Exact-Pricing-Methods_B.vcxproj
+++ b/Level9/Level9_ExA+B_Exact-Pricing-Methods_B/Level9_ExA+B_Exact-Pricing-Methods_B.vcxproj
@@ -131,10 +131,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="EuropeanOption.cpp" />
+    <ClCompile Include="EuropeanOptionException.cpp" />
     <ClCompile Include="TestEuropeanOption.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EuropeanOption.hpp" />
+    <ClInclude Include="EuropeanOptionException.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
