--- a/Level9/Level9_ExA+B_Exact-Pricing-Methods_B/Level9_ExA+B_Exact-Pricing-Methods_B.vcxproj
+++ b/Level9/Level9_ExA+B_Exact-Pricing-Methods_B/Level9_ExA+B_Exact-Pricing-Methods_B.vcxproj
@@ -139,13 +139,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="EuropeanOption.cpp" />
+    <ClCompile Include="AmericanOption.cpp" />
     <ClCompile Include="EuropeanOptionException.cpp" />
+    <ClCompile Include="ExactPricingMethods.cpp" />
+    <ClCompile Include="EuropeanOption.cpp" />
     <ClCompile Include="TestEuropeanOption.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EuropeanOption.hpp" />
+    <ClInclude Include="AmericanOption.h" />
     <ClInclude Include="EuropeanOptionException.h" />
+    <ClInclude Include="ExactPricingMethods.h" />
+    <ClInclude Include="EuropeanOption.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
