--- a/Level9/Level9_ExC+D_Advanced-Monte-Carlo/Level9_ExC+D_Advanced-Monte-Carlo.vcxproj.filters
+++ b/Level9/Level9_ExC+D_Advanced-Monte-Carlo/Level9_ExC+D_Advanced-Monte-Carlo.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Range.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="OptionData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OptionData.hpp">
